# northflank

./: Dockerfile  README.md  docker-compose.yaml  requirements.txt
VaultSpeed_agent/: Dockerfile  README.md  docker-compose.yml
VaultSpeed_agent/jdk/: .gitkeep
VaultSpeed_agent/scripts/: download_and_start_agent.sh  vaultspeed_api.py
config/: airflow.cfg
dags/: .airflowignore  29_VS_DAG_CRM_SYN_20260318_135339.py  29_mappings_CRM_SYN_20260318_135339.json  29_variables_20260318_135339.json
plugins/vs_fmc_plugin/: README.md  __init__.py  pyproject.toml  setup.cfg
plugins/vs_fmc_plugin/vaultspeed_provider/: __init__.py
plugins/vs_fmc_plugin/vaultspeed_provider/hooks/: bigquery_hook.py  databricks_hook.py  dbt_cli_hook.py  dbt_cloud_hook.py  jdbc_hook.py  livy_hook.py  singlestore_hook.py  spark_sql_hook.py
plugins/vs_fmc_plugin/vaultspeed_provider/operators/: bigquery_operator.py  databricks_operator.py  dbt_operator.py  jdbc_to_jdbc.py  spark_sql_operator.py
plugins/vs_fmc_plugin/vaultspeed_provider/sensors/: databricks_sensor.py  spark_sql_sensor.py
