[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-vaultspeed"
description = "A VaultSpeed provider for Apache Airflow"
authors = [
    { name = "VaultSpeed" },
]

classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = ">=3.10"
dependencies = [
    #"apache-airflow>=3.1.5", # version is not pinned here to allow backwards compatibility and avoid dependency issues
    "apache-airflow-providers-standard",
    "apache-airflow-providers-http>=5.3.0"
]

[project.optional-dependencies]
jdbc = ["apache-airflow-providers-jdbc>=5.3.1"]
snowflake = ["apache-airflow-providers-snowflake>=6.4.0"]
google = ["apache-airflow-providers-google>=15.1.0"]
databricks = ["apache-airflow-providers-databricks>=7.8.1"]
all = [
    "apache-airflow-providers-jdbc>=5.3.1",
    "apache-airflow-providers-snowflake>=6.4.0",
    "apache-airflow-providers-google>=15.1.0",
    "apache-airflow-providers-databricks>=7.8.1",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://docs.vaultspeed.com/"


[project.entry-points.apache_airflow_provider]
provider_info = "vaultspeed_provider.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "vaultspeed_provider.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]
